[gd_scene load_steps=3 format=1]

[ext_resource path="res://examples/swipe-signals/SwipeSignalsExample.gd" type="Script" id=1]
[ext_resource path="res://SwipeDetector.tscn" type="PackedScene" id=2]

[node name="SwipeSignalsExample" type="Node2D"]

script/script = ExtResource( 1 )
point_scale_step = 0.1
max_scale = 5.0

[node name="SwipeDetector" parent="." instance=ExtResource( 2 )]

limit_points = false
maximum_points = -1

[node name="Points" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 310.0
margin/bottom = 60.0
text = "Swipe Signal Example"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="swipe_ended" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_ended"]

[connection signal="swipe_started" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_started"]

[connection signal="swipe_updated" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_updated"]


